# agora

./: .dockerignore  .env.example  .gitignore  Agent.md  CONSENTIMIENTO.md  Cargo.toml  Dockerfile  README.md  TODO.md  compose.production.yml  decisiones.md  docker-compose.yml  members.md
.github/workflows/: ci.yml  deploy-oracle.yml
legal/: data-deletion.html  privacy.html  terms.html
migrations/: 0001_init.sql  0002_ingestion_jobs.sql  0003_webhook_hash_constraint.sql  0004_outgoing_idempotency.sql  0005_outgoing_status_timestamp.sql  0006_processing_queue_recovery.sql  0007_store_attachment_binaries.sql
scripts/: backup-postgres.sh  deploy-oracle.sh  provision-oracle.sh  test-restore-postgres.sh
src/: config.rs  document.rs  http.rs  legal.rs  lib.rs  main.rs  object_storage.rs  openai.rs  repository.rs  security.rs  text.rs  whatsapp.rs  worker.rs
tests/: repository_integration.rs
